--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
   <style>
     body {
       background-color: #f0f0f0;
+      font-size: 16px;
       margin: 0;
       padding: 20px;
-      font-size: 16px;
-      line-height: 1.6;
       color: #333;
     }
     canvas {
@@ -20,15 +19,16 @@
       border: 1px solid #ccc;
       border-radius: 12px;
     }
+    #subtitle, #score {
+      text-align: center;
+    }
     #subtitle {
       font-size: 20px;
-      text-align: center;
     }
     #score {
       font-size: 40px;
-      text-align: center;
-      margin-top: 20px;
       font-weight: bold;
+      margin-top: 20px;
     }
   </style>
 </head>
@@ -36,7 +36,6 @@
   <p id="subtitle">밥먹자! 안지민</p>
   <p id="score">현재점수: 0</p>
   <main><canvas id="canvas"></canvas></main>
-
   <script>
     const CANVAS_WIDTH = 800, CANVAS_HEIGHT = 500;
     const RUNNER_WIDTH = 100, RUNNER_HEIGHT = 100;
@@ -44,11 +43,20 @@
     const JUMP_SPEED = 6, MAX_JUMP_HEIGHT = 20;
     const BASE_OBSTACLE_SPEED = 4, BASE_OBSTACLE_FREQUENCY = 90;
     const SCORE_PER_OBSTACLE = 10;
-    const VILLAIN_SCALE_X = 2, VILLAIN_SCALE_Y = 1.5;
+    const VILLAIN_WIDTH = 150 * 2, VILLAIN_HEIGHT = 200 * 1.5;
 
     const ASSETS = {
+      sounds: {
+        jump: './sounds/jump.mp3',
+        bgm: './sounds/bgm.mp3',
+        score: './sounds/score.mp3',
+        defeat: './sounds/defeat1.mp3'
+      },
       images: {
         title: './background/title.png',
+        startBtn: './background/gamestart.png',
+        gameOver: './background/gameover.png',
+        restart: './background/restart.png',
         runnerSit: './character/jimin-sit.png',
         runnerFly: './character/jimin-fly.png',
         runnerCrash: './character/jimin-crash.png',
@@ -84,52 +92,60 @@
       canvas.width = CANVAS_WIDTH;
       canvas.height = CANVAS_HEIGHT;
 
-      let gameStarted = false, gameOver = false, jump = false;
-      let score = 0, timer = 0, stage = 0;
+      let gameStarted = false, gameOver = false;
+      let score = 0, timer = 0, jump = false;
+      let bgIndex = 0, villainY = CANVAS_HEIGHT, targetVillainY = CANVAS_HEIGHT - VILLAIN_HEIGHT;
       let obstacleSpeed = BASE_OBSTACLE_SPEED, obstacleFrequency = BASE_OBSTACLE_FREQUENCY;
-      let villainY = CANVAS_HEIGHT, villainTargetY, villainExit = false, villainReady = false;
+      let villainReady = false;
 
       const scoreText = document.getElementById('score');
+
       const runnerSit = new Image(); runnerSit.src = ASSETS.images.runnerSit;
       const runnerFly = new Image(); runnerFly.src = ASSETS.images.runnerFly;
       const runnerCrash = new Image(); runnerCrash.src = ASSETS.images.runnerCrash;
+      const bgImages = ASSETS.images.backgrounds.map(src => { let i = new Image(); i.src = src; return i; });
+      const villainImages = ASSETS.images.villains.map(src => { let i = new Image(); i.src = src; return i; });
+      const obstacleImages = ASSETS.images.obstacles.map(src => { let i = new Image(); i.src = src; return i; });
 
-      const bgImages = ASSETS.images.backgrounds.map(src => { const img = new Image(); img.src = src; return img; });
-      const villainImages = ASSETS.images.villains.map(src => { const img = new Image(); img.src = src; return img; });
-      const obstacleImgs = ASSETS.images.obstacles.map(src => { const img = new Image(); img.src = src; return img; });
-      const titleImg = new Image(); titleImg.src = ASSETS.images.title;
+      const startBackground = new Image(); startBackground.src = ASSETS.images.title;
+      const startButton = new Image(); startButton.src = ASSETS.images.startBtn;
+      const gameOverImage = new Image(); gameOverImage.src = ASSETS.images.gameOver;
+      const restartImage = new Image(); restartImage.src = ASSETS.images.restart;
 
       const runner = {
-        x: RUNNER_START_X, y: RUNNER_START_Y, width: RUNNER_WIDTH, height: RUNNER_HEIGHT,
+        x: RUNNER_START_X,
+        y: RUNNER_START_Y,
+        width: RUNNER_WIDTH,
+        height: RUNNER_HEIGHT,
         draw() {
-          ctx.drawImage(gameOver ? runnerCrash : (jump ? runnerFly : runnerSit), this.x, this.y, this.width, this.height);
+          const img = gameOver ? runnerCrash : (jump ? runnerFly : runnerSit);
+          ctx.drawImage(img, this.x, this.y, this.width, this.height);
         }
       };
 
       class Obstacle {
-        constructor(img) {
+        constructor(image) {
           this.x = CANVAS_WIDTH;
           this.y = Math.random() * (CANVAS_HEIGHT - 80) + 30;
-          this.width = 50; this.height = 50;
-          this.image = img; this.frame = 0;
+          this.width = 50;
+          this.height = 50;
+          this.image = image;
+          this.frame = 0;
         }
         draw(wave = false) {
           if (wave) this.y += Math.sin(this.frame++ / 5) * 2;
           ctx.drawImage(this.image, this.x, this.y, this.width, this.height);
         }
       }
-
       const obstacles = [];
 
       function drawBackground() {
-        ctx.drawImage(bgImages[stage], 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
+        ctx.drawImage(bgImages[bgIndex], 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
       }
 
       function drawVillain() {
-        const villainImg = villainImages[stage];
-        const villainWidth = villainImg.width * VILLAIN_SCALE_X;
-        const villainHeight = villainImg.height * VILLAIN_SCALE_Y;
-        ctx.drawImage(villainImg, CANVAS_WIDTH - villainWidth, villainY, villainWidth, villainHeight);
+        const img = villainImages[bgIndex];
+        ctx.drawImage(img, CANVAS_WIDTH - VILLAIN_WIDTH, villainY, VILLAIN_WIDTH, VILLAIN_HEIGHT);
       }
 
       function isCollision(a, b) {
@@ -143,67 +159,95 @@
         ctx.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
         drawBackground();
 
-        // 악당 등장/퇴장 애니메이션
-        if (!villainExit && villainY > villainTargetY) {
+        if (villainY > targetVillainY) {
           villainY -= 5;
-        } else if (villainExit) {
-          villainY += 5;
-          if (villainY > CANVAS_HEIGHT) {
-            villainExit = false;
-            stage++;
-            obstacleSpeed = BASE_OBSTACLE_SPEED + stage;
-            obstacleFrequency = Math.max(20, BASE_OBSTACLE_FREQUENCY - stage * 10);
-            villainY = CANVAS_HEIGHT;
-            villainTargetY = CANVAS_HEIGHT - (villainImages[stage].height * VILLAIN_SCALE_Y);
-            villainReady = false;
-            return;
-          }
         } else {
           villainReady = true;
         }
+
         drawVillain();
 
-        // 장애물 생성
         if (villainReady && timer % obstacleFrequency === 0) {
-          if (stage < 5) {
-            obstacles.push(new Obstacle(obstacleImgs[stage]));
+          if (bgIndex < 5) {
+            obstacles.push(new Obstacle(obstacleImages[bgIndex]));
           } else {
             for (let i = 0; i < 2; i++) {
-              const img = obstacleImgs[Math.floor(Math.random() * obstacleImgs.length)];
+              const img = obstacleImages[Math.floor(Math.random() * obstacleImages.length)];
               obstacles.push(new Obstacle(img));
             }
           }
         }
 
-        obstacles.forEach((obs, i) => {
+        obstacles.forEach((obs, idx) => {
           obs.x -= obstacleSpeed;
-          obs.draw(stage === 5);
+          obs.draw(bgIndex === 5);
           if (isCollision(runner, obs)) gameOver = true;
           if (obs.x < -obs.width) {
-            obstacles.splice(i, 1);
+            obstacles.splice(idx, 1);
             score += SCORE_PER_OBSTACLE;
             scoreText.textContent = '현재점수: ' + score;
-            if (score % 200 === 0 && stage < 5 && !villainExit) {
-              villainExit = true;
+            if (score % 200 === 0) {
               villainReady = false;
+              villainY = targetVillainY; // 퇴장
+              setTimeout(() => {
+                bgIndex = Math.min(5, bgIndex + 1);
+                obstacleSpeed += 1;
+                obstacleFrequency = Math.max(20, obstacleFrequency - 10);
+                villainY = CANVAS_HEIGHT; // 새 악당 등장
+              }, 1000);
             }
           }
         });
 
         runner.draw();
-        if (jump) runner.y = Math.max(MAX_JUMP_HEIGHT, runner.y - JUMP_SPEED);
-        else runner.y = Math.min(RUNNER_START_Y, runner.y + JUMP_SPEED);
+        runner.y += jump ? -JUMP_SPEED : JUMP_SPEED;
+        if (runner.y < MAX_JUMP_HEIGHT) jump = false;
+        if (runner.y > RUNNER_START_Y) runner.y = RUNNER_START_Y;
+
         timer++;
       }
 
-      document.addEventListener('keydown', e => { if (e.code === 'Space') jump = true; });
-      document.addEventListener('keyup', e => { if (e.code === 'Space') jump = false; });
-      canvas.addEventListener('click', () => { if (!gameStarted) { gameStarted = true; animate(); } });
+      document.addEventListener('keydown', e => {
+        if (e.code === 'Space') jump = true;
+      });
+      document.addEventListener('keyup', e => {
+        if (e.code === 'Space') jump = false;
+      });
 
-      // 시작 화면 로딩
-      titleImg.onload = () => {
-        ctx.drawImage(titleImg, 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
+      canvas.addEventListener('click', e => {
+        const rect = canvas.getBoundingClientRect();
+        const x = e.clientX - rect.left, y = e.clientY - rect.top;
+
+        if (!gameStarted) {
+          if (x >= (CANVAS_WIDTH - 200) / 2 && x <= (CANVAS_WIDTH + 200) / 2 &&
+              y >= (CANVAS_HEIGHT + 100) / 2 && y <= (CANVAS_HEIGHT + 200) / 2) {
+            gameStarted = true;
+            animate();
+          }
+        } else if (gameOver) {
+          if (x >= (CANVAS_WIDTH - 100) / 2 && x <= (CANVAS_WIDTH + 100) / 2 &&
+              y >= (CANVAS_HEIGHT + 50) / 2 && y <= (CANVAS_HEIGHT + 100) / 2) {
+            location.reload();
+          }
+        }
+      });
+
+      // 시작 화면 출력
+      startBackground.onload = () => {
+        ctx.drawImage(startBackground, 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
+        startButton.onload = () => {
+          ctx.drawImage(startButton, (CANVAS_WIDTH - 200) / 2, (CANVAS_HEIGHT + 100) / 2, 200, 100);
+        };
       };
+
+      // 게임오버 화면
+      const interval = setInterval(() => {
+        if (gameOver) {
+          ctx.drawImage(gameOverImage, (CANVAS_WIDTH - 300) / 2, (CANVAS_HEIGHT - 200) / 2, 300, 100);
+          ctx.drawImage(restartImage, (CANVAS_WIDTH - 100) / 2, (CANVAS_HEIGHT + 50) / 2, 100, 50);
+          clearInterval(interval);
+        }
+      }, 100);
     };
   </script>
 </body>
