--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       let score = 0, timer = 0, jump = false;
       let bgIndex = 0, villainY = CANVAS_HEIGHT, targetVillainY = CANVAS_HEIGHT - VILLAIN_HEIGHT;
       let obstacleSpeed = BASE_OBSTACLE_SPEED, obstacleFrequency = BASE_OBSTACLE_FREQUENCY;
-      let villainReady = false;
+      let villainReady = false, villainExiting = false;
 
       const scoreText = document.getElementById('score');
 
@@ -111,7 +111,6 @@
       const startButton = new Image(); startButton.src = ASSETS.images.startBtn;
       const gameOverImage = new Image(); gameOverImage.src = ASSETS.images.gameOver;
       const restartImage = new Image(); restartImage.src = ASSETS.images.restart;
-
       const runner = {
         x: RUNNER_START_X,
         y: RUNNER_START_Y,
@@ -137,6 +136,7 @@
           ctx.drawImage(this.image, this.x, this.y, this.width, this.height);
         }
       }
+
       const obstacles = [];
 
       function drawBackground() {
@@ -151,7 +151,6 @@
       function isCollision(a, b) {
         return !(a.x > b.x + b.width || a.x + a.width < b.x || a.y > b.y + b.height || a.y + a.height < b.y);
       }
-
       function animate() {
         if (gameOver) return;
 
@@ -159,18 +158,22 @@
         ctx.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
         drawBackground();
 
-        if (villainY > targetVillainY) {
+        // 악당 등장 애니메이션
+        if (!villainReady && villainY > targetVillainY) {
           villainY -= 5;
-        } else {
+        } else if (!villainReady && villainY <= targetVillainY) {
+          villainY = targetVillainY;
           villainReady = true;
         }
 
         drawVillain();
 
+        // 장애물 생성 (악당 등장 완료 후부터)
         if (villainReady && timer % obstacleFrequency === 0) {
           if (bgIndex < 5) {
             obstacles.push(new Obstacle(obstacleImages[bgIndex]));
           } else {
+            // 마지막 스테이지: 랜덤 등장 + 파동 궤적
             for (let i = 0; i < 2; i++) {
               const img = obstacleImages[Math.floor(Math.random() * obstacleImages.length)];
               obstacles.push(new Obstacle(img));
@@ -178,23 +181,35 @@
           }
         }
 
+        // 장애물 이동 및 충돌 판정
         obstacles.forEach((obs, idx) => {
           obs.x -= obstacleSpeed;
           obs.draw(bgIndex === 5);
-          if (isCollision(runner, obs)) gameOver = true;
+          if (isCollision(runner, obs)) {
+            gameOver = true;
+          }
           if (obs.x < -obs.width) {
             obstacles.splice(idx, 1);
             score += SCORE_PER_OBSTACLE;
             scoreText.textContent = '현재점수: ' + score;
+
+            // 스테이지 전환 (200점마다)
             if (score % 200 === 0) {
               villainReady = false;
-              villainY = targetVillainY; // 퇴장
-              setTimeout(() => {
-                bgIndex = Math.min(5, bgIndex + 1);
-                obstacleSpeed += 1;
-                obstacleFrequency = Math.max(20, obstacleFrequency - 10);
-                villainY = CANVAS_HEIGHT; // 새 악당 등장
-              }, 1000);
+
+              // 악당 퇴장 애니메이션
+              let exitInterval = setInterval(() => {
+                villainY += 5;
+                if (villainY >= CANVAS_HEIGHT) {
+                  clearInterval(exitInterval);
+                  // 다음 스테이지
+                  bgIndex = Math.min(5, Math.floor(score / 200));
+                  obstacleSpeed += 1;
+                  obstacleFrequency = Math.max(15, obstacleFrequency - 10);
+                  villainY = CANVAS_HEIGHT; // 초기화
+                  targetVillainY = CANVAS_HEIGHT - VILLAIN_HEIGHT;
+                }
+              }, 30);
             }
           }
         });
@@ -206,46 +221,59 @@
 
         timer++;
       }
-
+      // 키보드 입력
       document.addEventListener('keydown', e => {
         if (e.code === 'Space') jump = true;
       });
+
       document.addEventListener('keyup', e => {
         if (e.code === 'Space') jump = false;
       });
 
+      // 캔버스 클릭 처리
       canvas.addEventListener('click', e => {
         const rect = canvas.getBoundingClientRect();
-        const x = e.clientX - rect.left, y = e.clientY - rect.top;
+        const x = e.clientX - rect.left;
+        const y = e.clientY - rect.top;
 
         if (!gameStarted) {
-          if (x >= (CANVAS_WIDTH - 200) / 2 && x <= (CANVAS_WIDTH + 200) / 2 &&
-              y >= (CANVAS_HEIGHT + 100) / 2 && y <= (CANVAS_HEIGHT + 200) / 2) {
+          // 게임 시작 버튼 클릭
+          if (
+            x >= (CANVAS_WIDTH - 200) / 2 &&
+            x <= (CANVAS_WIDTH + 200) / 2 &&
+            y >= (CANVAS_HEIGHT + 100) / 2 &&
+            y <= (CANVAS_HEIGHT + 200) / 2
+          ) {
             gameStarted = true;
             animate();
           }
         } else if (gameOver) {
-          if (x >= (CANVAS_WIDTH - 100) / 2 && x <= (CANVAS_WIDTH + 100) / 2 &&
-              y >= (CANVAS_HEIGHT + 50) / 2 && y <= (CANVAS_HEIGHT + 100) / 2) {
+          // 재시작 버튼 클릭
+          if (
+            x >= (CANVAS_WIDTH - 100) / 2 &&
+            x <= (CANVAS_WIDTH + 100) / 2 &&
+            y >= (CANVAS_HEIGHT + 50) / 2 &&
+            y <= (CANVAS_HEIGHT + 100) / 2
+          ) {
             location.reload();
           }
         }
       });
 
-      // 시작 화면 출력
-      startBackground.onload = () => {
-        ctx.drawImage(startBackground, 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
-        startButton.onload = () => {
-          ctx.drawImage(startButton, (CANVAS_WIDTH - 200) / 2, (CANVAS_HEIGHT + 100) / 2, 200, 100);
+      // 게임 시작 화면 표시
+      titleImage.onload = () => {
+        ctx.drawImage(titleImage, 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
+        startButtonImage.onload = () => {
+          ctx.drawImage(startButtonImage, (CANVAS_WIDTH - 200) / 2, (CANVAS_HEIGHT + 100) / 2, 200, 100);
         };
       };
 
-      // 게임오버 화면
-      const interval = setInterval(() => {
+      // 게임 오버 화면 표시
+      const gameOverInterval = setInterval(() => {
         if (gameOver) {
           ctx.drawImage(gameOverImage, (CANVAS_WIDTH - 300) / 2, (CANVAS_HEIGHT - 200) / 2, 300, 100);
           ctx.drawImage(restartImage, (CANVAS_WIDTH - 100) / 2, (CANVAS_HEIGHT + 50) / 2, 100, 50);
-          clearInterval(interval);
+          clearInterval(gameOverInterval);
         }
       }, 100);
     };
