--- a/index.html
+++ b/index.html
@@ -39,12 +39,45 @@
 
   <script>
     const CANVAS_WIDTH = 800, CANVAS_HEIGHT = 500;
+    const RUNNER_WIDTH = 100, RUNNER_HEIGHT = 100;
+    const RUNNER_START_X = 10, RUNNER_START_Y = 400;
+    const JUMP_SPEED = 6, MAX_JUMP_HEIGHT = 20;
+    const BASE_OBSTACLE_SPEED = 4, BASE_OBSTACLE_FREQUENCY = 90;
+    const SCORE_PER_OBSTACLE = 10;
     const VILLAIN_WIDTH = 150 * 2, VILLAIN_HEIGHT = 200 * 1.5;
 
     const ASSETS = {
       images: {
         title: './background/title.png',
-        startBtn: './background/gamestart.png'
+        startBtn: './background/gamestart.png',
+        gameOver: './background/gameover.png',
+        restart: './background/restart.png',
+        runnerSit: './character/jimin-sit.png',
+        runnerFly: './character/jimin-fly.png',
+        runnerCrash: './character/jimin-crash.png',
+        backgrounds: [
+          './background/samin-background.png',
+          './background/sohyun-background.png',
+          './background/doyun-background.png',
+          './background/yeonki-background.png',
+          './background/sangwoo-background.png',
+          './background/boss-background.png'
+        ],
+        villains: [
+          './character/samin-basic.png',
+          './character/sohyun-basic.png',
+          './character/doyun-basic.png',
+          './character/yeonki-basic.png',
+          './character/sangwoo-basic.png',
+          './character/boss-basic.png'
+        ],
+        obstacles: [
+          './character/samin-obstacle.png',
+          './character/sohyun-obstacle.png',
+          './character/doyun-obstacle.png',
+          './character/yeonki-obstacle.png',
+          './character/sangwoo-obstacle.png'
+        ]
       }
     };
 
@@ -54,41 +87,163 @@
       canvas.width = CANVAS_WIDTH;
       canvas.height = CANVAS_HEIGHT;
 
-      const titleImage = new Image();
-      const startButtonImage = new Image();
+      let gameStarted = false, gameOver = false;
+      let score = 0, timer = 0, jump = false;
+      let bgIndex = 0, villainY = CANVAS_HEIGHT, targetVillainY = CANVAS_HEIGHT - VILLAIN_HEIGHT;
+      let obstacleSpeed = BASE_OBSTACLE_SPEED, obstacleFrequency = BASE_OBSTACLE_FREQUENCY;
+      let villainReady = false;
 
-      let imagesLoaded = 0;
-      const onLoadCallback = () => {
-        imagesLoaded++;
-        if (imagesLoaded === 2) {
-          drawStartScreen();
+      const scoreText = document.getElementById('score');
+
+      const runnerSit = new Image(); runnerSit.src = ASSETS.images.runnerSit;
+      const runnerFly = new Image(); runnerFly.src = ASSETS.images.runnerFly;
+      const runnerCrash = new Image(); runnerCrash.src = ASSETS.images.runnerCrash;
+      const bgImages = ASSETS.images.backgrounds.map(src => { const i = new Image(); i.src = src; return i; });
+      const villainImages = ASSETS.images.villains.map(src => { const i = new Image(); i.src = src; return i; });
+      const obstacleImages = ASSETS.images.obstacles.map(src => { const i = new Image(); i.src = src; return i; });
+
+      const startBackground = new Image(); startBackground.src = ASSETS.images.title;
+      const startButton = new Image(); startButton.src = ASSETS.images.startBtn;
+      const gameOverImage = new Image(); gameOverImage.src = ASSETS.images.gameOver;
+      const restartImage = new Image(); restartImage.src = ASSETS.images.restart;
+
+      const runner = {
+        x: RUNNER_START_X,
+        y: RUNNER_START_Y,
+        width: RUNNER_WIDTH,
+        height: RUNNER_HEIGHT,
+        draw() {
+          const img = gameOver ? runnerCrash : (jump ? runnerFly : runnerSit);
+          ctx.drawImage(img, this.x, this.y, this.width, this.height);
         }
       };
 
-      titleImage.onload = onLoadCallback;
-      startButtonImage.onload = onLoadCallback;
-
-      titleImage.src = ASSETS.images.title;
-      startButtonImage.src = ASSETS.images.startBtn;
-
-      function drawStartScreen() {
-        ctx.drawImage(titleImage, 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
-        ctx.drawImage(startButtonImage, (CANVAS_WIDTH - 200) / 2, (CANVAS_HEIGHT + 100) / 2, 200, 100);
+      class Obstacle {
+        constructor(image) {
+          this.x = CANVAS_WIDTH;
+          this.y = Math.random() * (CANVAS_HEIGHT - 80) + 30;
+          this.width = 50;
+          this.height = 50;
+          this.image = image;
+          this.frame = 0;
+        }
+        draw(wave = false) {
+          if (wave) this.y += Math.sin(this.frame++ / 5) * 2;
+          ctx.drawImage(this.image, this.x, this.y, this.width, this.height);
+        }
       }
 
-      // 클릭 이벤트로 시작 화면 클릭 여부 확인
-      canvas.addEventListener('click', (e) => {
+      const obstacles = [];
+
+      function drawBackground() {
+        ctx.drawImage(bgImages[bgIndex], 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
+      }
+
+      function drawVillain() {
+        const img = villainImages[bgIndex];
+        ctx.drawImage(img, CANVAS_WIDTH - VILLAIN_WIDTH, villainY, VILLAIN_WIDTH, VILLAIN_HEIGHT);
+      }
+
+      function isCollision(a, b) {
+        return !(a.x > b.x + b.width || a.x + a.width < b.x || a.y > b.y + b.height || a.y + a.height < b.y);
+      }
+
+      function animate() {
+        if (gameOver) return;
+        requestAnimationFrame(animate);
+        ctx.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
+        drawBackground();
+
+        if (!villainReady && villainY > targetVillainY) {
+          villainY -= 5;
+        } else if (!villainReady && villainY <= targetVillainY) {
+          villainY = targetVillainY;
+          villainReady = true;
+        }
+
+        drawVillain();
+
+        if (villainReady && timer % obstacleFrequency === 0) {
+          if (bgIndex < 5) {
+            obstacles.push(new Obstacle(obstacleImages[bgIndex]));
+          } else {
+            for (let i = 0; i < 2; i++) {
+              const img = obstacleImages[Math.floor(Math.random() * obstacleImages.length)];
+              obstacles.push(new Obstacle(img));
+            }
+          }
+        }
+
+        obstacles.forEach((obs, idx) => {
+          obs.x -= obstacleSpeed;
+          obs.draw(bgIndex === 5);
+          if (isCollision(runner, obs)) gameOver = true;
+          if (obs.x < -obs.width) {
+            obstacles.splice(idx, 1);
+            score += SCORE_PER_OBSTACLE;
+            scoreText.textContent = '현재점수: ' + score;
+
+            if (score % 200 === 0) {
+              villainReady = false;
+              let exitInterval = setInterval(() => {
+                villainY += 5;
+                if (villainY >= CANVAS_HEIGHT) {
+                  clearInterval(exitInterval);
+                  bgIndex = Math.min(5, Math.floor(score / 200));
+                  obstacleSpeed += 1;
+                  obstacleFrequency = Math.max(15, obstacleFrequency - 10);
+                  villainY = CANVAS_HEIGHT;
+                  targetVillainY = CANVAS_HEIGHT - VILLAIN_HEIGHT;
+                }
+              }, 30);
+            }
+          }
+        });
+
+        runner.draw();
+        runner.y += jump ? -JUMP_SPEED : JUMP_SPEED;
+        if (runner.y < MAX_JUMP_HEIGHT) jump = false;
+        if (runner.y > RUNNER_START_Y) runner.y = RUNNER_START_Y;
+
+        timer++;
+      }
+
+      document.addEventListener('keydown', e => { if (e.code === 'Space') jump = true; });
+      document.addEventListener('keyup', e => { if (e.code === 'Space') jump = false; });
+
+      canvas.addEventListener('click', e => {
         const rect = canvas.getBoundingClientRect();
         const x = e.clientX - rect.left;
         const y = e.clientY - rect.top;
 
-        const btnX = (CANVAS_WIDTH - 200) / 2;
-        const btnY = (CANVAS_HEIGHT + 100) / 2;
-        if (x >= btnX && x <= btnX + 200 && y >= btnY && y <= btnY + 100) {
-          alert("게임이 시작됩니다! (여기서 이후 로직 실행)");
-          // 여기서 애니메이션 함수나 게임 초기화 함수 호출
+        if (!gameStarted) {
+          if (x >= (CANVAS_WIDTH - 200) / 2 && x <= (CANVAS_WIDTH + 200) / 2 &&
+              y >= (CANVAS_HEIGHT + 100) / 2 && y <= (CANVAS_HEIGHT + 200) / 2) {
+            gameStarted = true;
+            animate();
+          }
+        } else if (gameOver) {
+          if (x >= (CANVAS_WIDTH - 100) / 2 && x <= (CANVAS_WIDTH + 100) / 2 &&
+              y >= (CANVAS_HEIGHT + 50) / 2 && y <= (CANVAS_HEIGHT + 100) / 2) {
+            location.reload();
+          }
         }
       });
+
+      startBackground.onload = () => {
+        ctx.drawImage(startBackground, 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
+        startButton.onload = () => {
+          ctx.drawImage(startButton, (CANVAS_WIDTH - 200) / 2, (CANVAS_HEIGHT + 100) / 2, 200, 100);
+        };
+      };
+
+      const gameOverInterval = setInterval(() => {
+        if (gameOver) {
+          ctx.drawImage(gameOverImage, (CANVAS_WIDTH - 300) / 2, (CANVAS_HEIGHT - 200) / 2, 300, 100);
+          ctx.drawImage(restartImage, (CANVAS_WIDTH - 100) / 2, (CANVAS_HEIGHT + 50) / 2, 100, 50);
+          clearInterval(gameOverInterval);
+        }
+      }, 100);
     };
   </script>
 </body>
