--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
       const villainImages = ASSETS.images.villains.map(src => { const i = new Image(); i.src = src; return i; });
       const obstacleImages = ASSETS.images.obstacles.map(src => { const i = new Image(); i.src = src; return i; });
 
-      const startBackground = new Image(); startBackground.src = ASSETS.images.title;
-      const startButton = new Image(); startButton.src = ASSETS.images.startBtn;
+      const titleImage = new Image(); titleImage.src = ASSETS.images.title;
+      const startButtonImage = new Image(); startButtonImage.src = ASSETS.images.startBtn;
       const gameOverImage = new Image(); gameOverImage.src = ASSETS.images.gameOver;
       const restartImage = new Image(); restartImage.src = ASSETS.images.restart;
 
@@ -150,13 +150,15 @@
 
       function animate() {
         if (gameOver) return;
+
         requestAnimationFrame(animate);
         ctx.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
         drawBackground();
 
+        // 악당 등장 애니메이션
         if (!villainReady && villainY > targetVillainY) {
           villainY -= 5;
-        } else if (!villainReady && villainY <= targetVillainY) {
+        } else if (!villainReady) {
           villainY = targetVillainY;
           villainReady = true;
         }
@@ -182,7 +184,6 @@
             obstacles.splice(idx, 1);
             score += SCORE_PER_OBSTACLE;
             scoreText.textContent = '현재점수: ' + score;
-
             if (score % 200 === 0) {
               villainReady = false;
               let exitInterval = setInterval(() => {
@@ -208,8 +209,12 @@
         timer++;
       }
 
-      document.addEventListener('keydown', e => { if (e.code === 'Space') jump = true; });
-      document.addEventListener('keyup', e => { if (e.code === 'Space') jump = false; });
+      document.addEventListener('keydown', e => {
+        if (e.code === 'Space') jump = true;
+      });
+      document.addEventListener('keyup', e => {
+        if (e.code === 'Space') jump = false;
+      });
 
       canvas.addEventListener('click', e => {
         const rect = canvas.getBoundingClientRect();
@@ -217,26 +222,32 @@
         const y = e.clientY - rect.top;
 
         if (!gameStarted) {
-          if (x >= (CANVAS_WIDTH - 200) / 2 && x <= (CANVAS_WIDTH + 200) / 2 &&
-              y >= (CANVAS_HEIGHT + 100) / 2 && y <= (CANVAS_HEIGHT + 200) / 2) {
+          if (x >= (CANVAS_WIDTH - 200) / 2 &&
+              x <= (CANVAS_WIDTH + 200) / 2 &&
+              y >= (CANVAS_HEIGHT + 100) / 2 &&
+              y <= (CANVAS_HEIGHT + 200) / 2) {
             gameStarted = true;
-            animate();
+            animate(); // alert 없이 바로 실행!
           }
         } else if (gameOver) {
-          if (x >= (CANVAS_WIDTH - 100) / 2 && x <= (CANVAS_WIDTH + 100) / 2 &&
-              y >= (CANVAS_HEIGHT + 50) / 2 && y <= (CANVAS_HEIGHT + 100) / 2) {
+          if (x >= (CANVAS_WIDTH - 100) / 2 &&
+              x <= (CANVAS_WIDTH + 100) / 2 &&
+              y >= (CANVAS_HEIGHT + 50) / 2 &&
+              y <= (CANVAS_HEIGHT + 100) / 2) {
             location.reload();
           }
         }
       });
 
-      startBackground.onload = () => {
-        ctx.drawImage(startBackground, 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
-        startButton.onload = () => {
-          ctx.drawImage(startButton, (CANVAS_WIDTH - 200) / 2, (CANVAS_HEIGHT + 100) / 2, 200, 100);
+      // 시작화면 출력
+      titleImage.onload = () => {
+        ctx.drawImage(titleImage, 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
+        startButtonImage.onload = () => {
+          ctx.drawImage(startButtonImage, (CANVAS_WIDTH - 200) / 2, (CANVAS_HEIGHT + 100) / 2, 200, 100);
         };
       };
 
+      // 게임 오버 화면
       const gameOverInterval = setInterval(() => {
         if (gameOver) {
           ctx.drawImage(gameOverImage, (CANVAS_WIDTH - 300) / 2, (CANVAS_HEIGHT - 200) / 2, 300, 100);
