--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
   <p id="subtitle">밥먹자! 안지민</p>
   <p id="score">현재점수: 0</p>
   <main><canvas id="canvas"></canvas></main>
-
   <script>
     const CANVAS_WIDTH = 800, CANVAS_HEIGHT = 500;
     const RUNNER_WIDTH = 100, RUNNER_HEIGHT = 100;
@@ -95,17 +94,22 @@
 
       const scoreText = document.getElementById('score');
 
-      const runnerSit = new Image(); runnerSit.src = ASSETS.images.runnerSit;
-      const runnerFly = new Image(); runnerFly.src = ASSETS.images.runnerFly;
-      const runnerCrash = new Image(); runnerCrash.src = ASSETS.images.runnerCrash;
-      const bgImages = ASSETS.images.backgrounds.map(src => { const i = new Image(); i.src = src; return i; });
-      const villainImages = ASSETS.images.villains.map(src => { const i = new Image(); i.src = src; return i; });
-      const obstacleImages = ASSETS.images.obstacles.map(src => { const i = new Image(); i.src = src; return i; });
+      const loadImage = (src) => {
+        const img = new Image();
+        img.src = src;
+        return img;
+      };
 
-      const titleImage = new Image(); titleImage.src = ASSETS.images.title;
-      const startButtonImage = new Image(); startButtonImage.src = ASSETS.images.startBtn;
-      const gameOverImage = new Image(); gameOverImage.src = ASSETS.images.gameOver;
-      const restartImage = new Image(); restartImage.src = ASSETS.images.restart;
+      const runnerSit = loadImage(ASSETS.images.runnerSit);
+      const runnerFly = loadImage(ASSETS.images.runnerFly);
+      const runnerCrash = loadImage(ASSETS.images.runnerCrash);
+      const bgImages = ASSETS.images.backgrounds.map(loadImage);
+      const villainImages = ASSETS.images.villains.map(loadImage);
+      const obstacleImages = ASSETS.images.obstacles.map(loadImage);
+      const titleImage = loadImage(ASSETS.images.title);
+      const startButtonImage = loadImage(ASSETS.images.startBtn);
+      const gameOverImage = loadImage(ASSETS.images.gameOver);
+      const restartImage = loadImage(ASSETS.images.restart);
 
       const runner = {
         x: RUNNER_START_X,
@@ -140,8 +144,7 @@
       }
 
       function drawVillain() {
-        const img = villainImages[bgIndex];
-        ctx.drawImage(img, CANVAS_WIDTH - VILLAIN_WIDTH, villainY, VILLAIN_WIDTH, VILLAIN_HEIGHT);
+        ctx.drawImage(villainImages[bgIndex], CANVAS_WIDTH - VILLAIN_WIDTH, villainY, VILLAIN_WIDTH, VILLAIN_HEIGHT);
       }
 
       function isCollision(a, b) {
@@ -155,10 +158,9 @@
         ctx.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
         drawBackground();
 
-        // 악당 등장 애니메이션
         if (!villainReady && villainY > targetVillainY) {
           villainY -= 5;
-        } else if (!villainReady) {
+        } else if (!villainReady && villainY <= targetVillainY) {
           villainY = targetVillainY;
           villainReady = true;
         }
@@ -184,6 +186,7 @@
             obstacles.splice(idx, 1);
             score += SCORE_PER_OBSTACLE;
             scoreText.textContent = '현재점수: ' + score;
+
             if (score % 200 === 0) {
               villainReady = false;
               let exitInterval = setInterval(() => {
@@ -212,6 +215,7 @@
       document.addEventListener('keydown', e => {
         if (e.code === 'Space') jump = true;
       });
+
       document.addEventListener('keyup', e => {
         if (e.code === 'Space') jump = false;
       });
@@ -222,24 +226,19 @@
         const y = e.clientY - rect.top;
 
         if (!gameStarted) {
-          if (x >= (CANVAS_WIDTH - 200) / 2 &&
-              x <= (CANVAS_WIDTH + 200) / 2 &&
-              y >= (CANVAS_HEIGHT + 100) / 2 &&
-              y <= (CANVAS_HEIGHT + 200) / 2) {
+          if (x >= (CANVAS_WIDTH - 200) / 2 && x <= (CANVAS_WIDTH + 200) / 2 &&
+              y >= (CANVAS_HEIGHT + 100) / 2 && y <= (CANVAS_HEIGHT + 200) / 2) {
             gameStarted = true;
-            animate(); // alert 없이 바로 실행!
+            animate();
           }
         } else if (gameOver) {
-          if (x >= (CANVAS_WIDTH - 100) / 2 &&
-              x <= (CANVAS_WIDTH + 100) / 2 &&
-              y >= (CANVAS_HEIGHT + 50) / 2 &&
-              y <= (CANVAS_HEIGHT + 100) / 2) {
+          if (x >= (CANVAS_WIDTH - 100) / 2 && x <= (CANVAS_WIDTH + 100) / 2 &&
+              y >= (CANVAS_HEIGHT + 50) / 2 && y <= (CANVAS_HEIGHT + 100) / 2) {
             location.reload();
           }
         }
       });
 
-      // 시작화면 출력
       titleImage.onload = () => {
         ctx.drawImage(titleImage, 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
         startButtonImage.onload = () => {
@@ -247,12 +246,10 @@
         };
       };
 
-      // 게임 오버 화면
-      const gameOverInterval = setInterval(() => {
+      setInterval(() => {
         if (gameOver) {
           ctx.drawImage(gameOverImage, (CANVAS_WIDTH - 300) / 2, (CANVAS_HEIGHT - 200) / 2, 300, 100);
           ctx.drawImage(restartImage, (CANVAS_WIDTH - 100) / 2, (CANVAS_HEIGHT + 50) / 2, 100, 50);
-          clearInterval(gameOverInterval);
         }
       }, 100);
     };
