--- a/index.html
+++ b/index.html
@@ -41,8 +41,6 @@
     const RUNNER_WIDTH = 100, RUNNER_HEIGHT = 100;
     const RUNNER_START_X = 10, RUNNER_START_Y = 400;
     const JUMP_SPEED = 6, MAX_JUMP_HEIGHT = 20;
-    const BASE_OBSTACLE_SPEED = 4, BASE_OBSTACLE_FREQUENCY = 90;
-    const SCORE_PER_OBSTACLE = 10;
 
     const ASSETS = {
       title: './background/title.png',
@@ -70,51 +68,59 @@
       const runnerSit = new Image();
       const runnerFly = new Image();
 
+      // 이미지 로드 순서를 보장
+      let imagesLoaded = 0;
+      function onImageLoaded() {
+        imagesLoaded++;
+        if (imagesLoaded === 2) {
+          drawStartScreen();
+        }
+      }
+
+      titleImage.onload = onImageLoaded;
+      startBtnImage.onload = onImageLoaded;
+
       titleImage.src = ASSETS.title;
       startBtnImage.src = ASSETS.startBtn;
       runnerSit.src = ASSETS.runnerSit;
       runnerFly.src = ASSETS.runnerFly;
 
-      // 시작화면 출력
-      titleImage.onload = () => {
+      function drawStartScreen() {
+        ctx.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
         ctx.drawImage(titleImage, 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
-        startBtnImage.onload = () => {
-          ctx.drawImage(startBtnImage, (CANVAS_WIDTH - 200) / 2, (CANVAS_HEIGHT + 100) / 2, 200, 100);
-        };
-      };
-
-      canvas.addEventListener('click', e => {
-        if (!gameStarted) {
-          const rect = canvas.getBoundingClientRect();
-          const x = e.clientX - rect.left;
-          const y = e.clientY - rect.top;
-
-          if (
-            x >= (CANVAS_WIDTH - 200) / 2 &&
-            x <= (CANVAS_WIDTH + 200) / 2 &&
-            y >= (CANVAS_HEIGHT + 100) / 2 &&
-            y <= (CANVAS_HEIGHT + 200) / 2
-          ) {
-            gameStarted = true;
-            animate();
-          }
-        }
-      });
+        ctx.drawImage(startBtnImage, (CANVAS_WIDTH - 200) / 2, (CANVAS_HEIGHT + 100) / 2, 200, 100);
+      }
 
       function animate() {
         requestAnimationFrame(animate);
         ctx.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
 
-        // 플레이어 점프 동작
+        // 점프 로직
         if (jump && runnerY > MAX_JUMP_HEIGHT) {
           runnerY -= JUMP_SPEED;
         } else if (!jump && runnerY < RUNNER_START_Y) {
           runnerY += JUMP_SPEED;
         }
 
-        const runnerImage = jump || runnerY < RUNNER_START_Y ? runnerFly : runnerSit;
+        const runnerImage = (jump || runnerY < RUNNER_START_Y) ? runnerFly : runnerSit;
         ctx.drawImage(runnerImage, RUNNER_START_X, runnerY, RUNNER_WIDTH, RUNNER_HEIGHT);
       }
+
+      // 시작 버튼 클릭
+      canvas.addEventListener('click', e => {
+        if (!gameStarted) {
+          const rect = canvas.getBoundingClientRect();
+          const x = e.clientX - rect.left;
+          const y = e.clientY - rect.top;
+          const btnX = (CANVAS_WIDTH - 200) / 2;
+          const btnY = (CANVAS_HEIGHT + 100) / 2;
+
+          if (x >= btnX && x <= btnX + 200 && y >= btnY && y <= btnY + 100) {
+            gameStarted = true;
+            animate();
+          }
+        }
+      });
 
       document.addEventListener('keydown', e => {
         if (e.code === 'Space') jump = true;
